--- a/res/layout/activity_screen.xml
+++ b/res/layout/activity_screen.xml
@@ -1,15 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ScreenActivity" >
 
     <EditText
         android:id="@+id/loginUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         android:layout_marginTop="102dp"
         android:ems="10"
         android:hint="Username" >
@@ -20,8 +20,7 @@
         android:id="@+id/loginPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/loginUsername"
-        android:layout_below="@+id/loginUsername"
+        android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Password"
@@ -29,11 +28,10 @@
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="wrap_content"
+        android:layout_width="209dp"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/loginPassword"
-        android:layout_alignRight="@+id/loginUsername"
         android:layout_centerVertical="true"
+        android:layout_gravity="center"
         android:text="Login" />
 
-</RelativeLayout>
+</LinearLayout>
